--- a/style.css
+++ b/style.css
@@ -39,7 +39,14 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 90%;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    padding: 10px 10px 10px;
+    border-radius: 5px;
+    transition: all .1s ease-in-out;
+}
+
+.block1__text:hover {
+    background-color: #E5E7EB;
 }
 
 .block1__image {
@@ -77,12 +84,22 @@ body {
     text-decoration: none;
     color: #3e4040;
     margin-right: 10px;
+    transition: all .1s ease-in-out;
+}
+
+.header__button:hover {
+    background-color: #dcdde0;
 }
 
 .header__button:nth-child(2) {
     width: 100px;
     background-color: #000000;
     color: white;
+    transition: all .3s ease-in-out;
+}
+
+.header__button:nth-child(2):hover {
+    background-color: #007bff;
 }
 
 .cards {
