--- a/database.css
+++ b/database.css
@@ -1,14 +1,20 @@
 /* Общие стили для формы */
+.content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: calc(100vh - 55px);
+    justify-content: center;
+    align-items: center;
+}
 .database-form {
     max-width: 400px;
-    margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px; /* Скругленные углы */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Легкая тень */
     font-family: Arial, sans-serif;
     color: #333;
-    margin-top: 40px;
 }
 
 .database-form h2 {
