--- a/file.css
+++ b/file.css
@@ -1,10 +1,16 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: calc(100vh - 55px);
+    justify-content: center;
+    align-items: center;
+}
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 70%;
-    margin: auto;
-    margin-top: 40px;
 }
 
 .file-label {
